--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,28 @@ body {
         margin-bottom: 0;
     }
 }
+
+/* Estilos para pantallas grandes, nootebook*/
+
+@media (min-width :930px) {
+    .contenedor {
+        max-width: 70%;
+        margin-bottom: 2rem;
+    }
+
+    .formulario {
+        padding: 2.5rem;
+    }
+
+    .campo label {
+        font-size: 1.8rem;
+    }
+
+    .input-text, .form-control {
+        font-size: 1.6rem;
+    }
+
+    .boton {
+        font-size: 2.2rem;
+    }
+}
